# CourseProject_Second

./: .gitignore  beast_cache_wrap.py  dump.csv  get_by_date.py  l_cache  pyproject.toml  select_sorted.py  shell_sort.py
CRS_2/: .gitignore  beast_cache_wrap.py  get_by_date.py  pyproject.toml  select_sorted.py
